--- a/CSS/contacto.css
+++ b/CSS/contacto.css
@@ -1,190 +1,88 @@
-/*GLOBAL*/
+@import url(./general.css);
+@import url(./general.css);
 
-/*GLOBAL IMPORTS*/
-@font-face {/*PARRAFOS...*/
-    font-family: 'SourceCode-Regular';
-    src: url(../../ASSETS/FONTS/SourceCodePro-VariableFont_wght.ttf);
-    /*Link del recurso: https://fonts.google.com/download/next-steps*/
-}
-
-@font-face {/**/
-    font-family: 'SourceCode-Italic';
-    src: url(../../ASSETS/FONTS/SourceCodePro-Italic-VariableFont_wght.ttf);
-    /*Link del recurso: https://fonts.google.com/download/next-steps*/
-}
-
-@font-face {/*Titulos,  encabezados...*/
-    font-family: 'RockwellCondensed';
-    src: url(../../ASSETS/FONTS/rockwell-condensed.ttf);
-    /*Link de recurso https://en.maisfontes.com/rockwell-condensed.font*/
-}
-
-:root{
-    /*BLANCOS*/
-    --blanco-suave : #f5f5f5; /*Para fondos*/
-    --blanco-suave01 : #f4f4f4; /*Para fondos*/
-    /*GRISES*/
-    --gris-claro : #dadada;  /*Para header y footer*/
-    --gris-claro-01: #cdcdcd;  /*Un poco mas oscuro que gris-claro*/
-    --gris-claro-02 : #c0c0c0;  /*Un poco mas oscuro que gris-claro01*/
-    --gris-OP-05 : #c0c0c050;  /*Un poco mas oscuro que gris-claro01*/
-
-
-    /*BEIGE*/
-    --beige-claro: #f0ead6; /*Otros*/
-}
-
-/*GLOBAL STYLES*/
-*{
-    margin: 0 auto;
-}
-
-/*SCROLL BAR*/
-::-webkit-scrollbar-button{
-    display: none;
-}
-::-webkit-scrollbar{
-    width: 6px;
-    height: 0.5px;
-    background-color: #000000;
-}
-
-::-webkit-scrollbar-thumb{
-    background-color: #ff0000;
-    border-radius: 35px;
-}
-
-/*HEADER*/
-header{
-    width: 60%;
-    height: 170px;
-
-    margin-bottom: 70px;
-}
-
-#headerContainer{
-    width: 100%;
-    height: 100%;
-
+main{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
-}
 
-header img{
-    width: 200px;
-    height: 125px;
-}
-
-#navContainer{
-    /*ORDEN*/
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    /*DECORACIONES*/
-    background-color: #c0c0c0;
-    width: 80%;
-    height: 100%;
-    border-radius: 50px;
-    filter: drop-shadow(0 3px 2px rgba(0, 0, 0, 0.7));
-}
-
-header a{
-    /*DECORACIONES*/
-    color: #000;
-    text-decoration: none;
-    letter-spacing: 2px;
-    font-family: 'RockwellCondensed',  system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 1.5rem;
-
-    /*MARGENES*/
-    margin-inline: 50px;
-    transition: all 0.1s linear;
-}
-
-header a:hover{
-    font-size: 1.7rem;
-}
-
-@media (max-width:1024px) {
-    header {
-        width: 100%;
-    }
-    header a{
-        font-size: 1.4rem;
-        margin-inline: 20px;
-    }
-}
-
-/*MAIN*/
-main{
-    margin-top: 100px;
-    margin-bottom: 100px;
-}
-
-/*FOOTER*/
-footer{
-    /*ORDEN*/
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-
-
-
-    /*TAMAÑO Y BORDES*/
-    border: 4px  solid var(--gris-claro-02);
-    border-inline: none;
-    box-shadow: 0 0 20px  rgba(0, 0, 0, 0.452);
-    width: 100vw;
-
-    /*FUENTE*/
-    font-family: "RockwellCondensed", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-}
-.footerContainer{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-
-    height: 120px;
     width: 100%;
-
-    margin-bottom: 10px;
 }
 
-footer a{
-    color: #ff0000;
+main .box{
+    /*ORDEN*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    text-align: justify;
+    padding: 25px;
+
+    /*TAMAÑO*/
+    height: auto;
+    width: 55%;
+
+    /*DECORACIONES*/
+    background-color: var(--gris-OP-05);
+    border-radius: 10px;
+    box-shadow: 0 5px 10px;
+    margin-bottom: 60px;
 }
 
-footer img{
-    width: 120px;
-    height: 100px;
-    transition: all 0.4s  ease-in-out;
-}
-footer img:hover{
-    transform: scale(1.3);
-    filter: drop-shadow(1px 1px 20px #000000);
+main .box h2{
+    padding-bottom: 25px;
+    font-family: 'RockwellCondensed',  system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.8rem;
+    font-weight: 200;
+    letter-spacing: 2px;
 }
 
-#footerInfo ul{
-    margin-top: 10px;
-    text-align: center;
-    list-style: none;
-}
-#footerInfo h4{
-    font-weight: 100;
-    font-size: 1.5rem;
-}
-#footerInfo li{
+main .box p{
+    font-family: 'SourceCode',  system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.2rem;
 }
 
-#footerInfo img{
-    height: 40px;
-    width: 40px;
+main section{
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    width: 60%;
 }
+main iframe{
+    width: 700px;
+    height: 800px;
+}
+
+@media (max-width:1440px) {
+    main iframe{
+        width: 550px;
+        height: 600px;
+
+        transform: translateX(-55px);
+    }
+}
+
+
+
+@media (max-width:1024px) {
+    main iframe{
+        width: 470px;
+        height: 600px;
+
+        transform: translateX(-100px);
+    }
+}
+
+
+
+main img{
+    width: 300px;
+    height: 200px;
+}
+
+main a{
+    color: #f00;
+}
+
