--- a/CSS/general.css
+++ b/CSS/general.css
@@ -39,6 +39,11 @@
     margin: 0 auto;
 }
 
+body{
+    width: 100%;
+    height: 100dvh;
+}
+
 /*SCROLL BAR*/
 ::-webkit-scrollbar-button{
     display: none;
@@ -123,18 +128,11 @@ header a:hover{
 main{
     margin-top: 100px;
     margin-bottom: 100px;
+
 }
 
 /*FOOTER*/
 footer{
-    /*ORDEN*/
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-
-
-
     /*TAMAÑO Y BORDES*/
     border: 4px  solid var(--gris-claro-02);
     border-inline: none;
@@ -145,6 +143,7 @@ footer{
     font-family: "RockwellCondensed", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
+
 .footerContainer{
     display: flex;
     flex-direction: row;
